Fixed text size and spacing in mobile view on WhySUS page

--- a/src/components/SponsorsPageInside/Sus/Sponsors.module.css
+++ b/src/components/SponsorsPageInside/Sus/Sponsors.module.css
@@ -114,4 +114,16 @@ body {
     height: 0;
     width: 0;
   }
+  .SponsorTitle {
+    font-size: 2.5rem;
+    margin-top: 14vw;
+    margin-left: 5vw;
+  }
+  .SponsorHeadings {
+    font-size: 1.55rem;
+  }
+  .SponsorText {
+    font-size: 1.25rem;
+  }
+
 }
